.provarCaches/00D5f000005vwGkEAI/objects/rstkf__brmatch__c.object
<CustomObject>
    <description>brmatch__c</description>
    <fields>
        <fullName>rstkf__brmatch_accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_bankstmtamt__c</fullName>
        <label>Bank Stmt Amnt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_banktxnamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>System Amnt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_confidence__c</fullName>
        <label>Reconcile Confidence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_glbankstmtd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Lines</label>
        <referenceTo>rstkf__glbankstmtd__c</referenceTo>
        <relationshipLabel>Bank Recon Auto Match</relationshipLabel>
        <relationshipName>brmatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_glbanktxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Transaction</label>
        <referenceTo>rstkf__glbanktxn__c</referenceTo>
        <relationshipLabel>Bank Recon Auto Match</relationshipLabel>
        <relationshipName>brmatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_glusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial System User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Bank Recon Auto Match</relationshipLabel>
        <relationshipName>brmatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_reconstatus__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__brmatch_varianceamt__c</fullName>
        <label>Variance Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bank Recon Auto Match</label>
    <nameField>
        <label>Bank Recon Auto Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Recon Auto Match</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>